--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
-    <string name="app_name">EspressoUITestExamples</string>
-    <string name="text_next">Next</string>
-    <string name="text_start">Start</string>
-    <string name="text_next_fragment">Next fragment</string>
-    <string name="text_next_activity">Next Activity</string>
-    <string name="text_secondary_fragment">This is Secondary Fragment</string>
-    <string name="text_mainactivity">MainActivity</string>
-    <string name="text_back">Back</string>
-    <string name="text_secondaryactivity">SecondaryActivity</string>
+
+    <string name="mainactivity">MainActivity</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
+    <string name="this_is_secondary_fragment">This is Secondary Fragment</string>
 </resources>
